[gd_scene load_steps=13 format=3 uid="uid://cjllujv51y0b5"]

[ext_resource type="PackedScene" uid="uid://40npssfr32h3" path="res://actor/base/actor.tscn" id="1_430no"]
[ext_resource type="Script" path="res://npc/base/NonPlayer.gd" id="2_snow6"]
[ext_resource type="Script" path="res://actor/stats/Health.gd" id="3_kgrph"]
[ext_resource type="Texture2D" uid="uid://bt5oigefhqte7" path="res://npc/base/breadator.png" id="3_x3kj1"]
[ext_resource type="Script" path="res://core/State.gd" id="4_ur2x4"]
[ext_resource type="FontData" uid="uid://eq0b16sgxcn7" path="res://ui/M5X7.TTF" id="6_3ox0e"]

[sub_resource type="Resource" id="Resource_kmveo"]
resource_local_to_scene = true
resource_name = "Health"
script = ExtResource( "3_kgrph" )
base = 5
invulnerable = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8f07r"]
size = Vector2(31, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kvrw"]
size = Vector2(33, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlmy6"]
bg_color = Color(0.427451, 0.839216, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yww6n"]
bg_color = Color(0, 0.313726, 0.0823529, 1)

[sub_resource type="Font" id="Font_sjot6"]
data/0 = ExtResource( "6_3ox0e" )

[node name="Enemy" instance=ExtResource( "1_430no" )]
position = Vector2(0, 0)
collision_layer = 4104
collision_mask = 8196
script = ExtResource( "2_snow6" )
health = SubResource( "Resource_kmveo" )
speed_base = 70.0

[node name="Vision" type="RayCast2D" parent="." index="0"]
position = Vector2(0, -12)
target_position = Vector2(0, 300)
collision_mask = 2097153
collide_with_areas = true

[node name="StateName" parent="." index="1"]
visible = false

[node name="Sprite" parent="." index="2"]
position = Vector2(0, -12)
rotation = -0.00412635
texture = ExtResource( "3_x3kj1" )

[node name="Hitbox" parent="." index="3"]
position = Vector2(0, -15)
collision_layer = 32768
collision_mask = 16384
monitorable = false

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2(-0.5, 4)
shape = SubResource( "RectangleShape2D_8f07r" )

[node name="Collider" parent="." index="4"]
position = Vector2(-0.5, -2)
shape = SubResource( "RectangleShape2D_4kvrw" )

[node name="NavAgent" type="NavigationAgent2D" parent="." index="7"]
target_desired_distance = 10.0
max_neighbors = 1

[node name="BaseSM" parent="." index="8"]
default_state_path = NodePath("State")

[node name="State" type="Node" parent="BaseSM" index="0"]
script = ExtResource( "4_ur2x4" )

[node name="ProgressBar" type="ProgressBar" parent="." index="9"]
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = -27.0
theme_override_font_sizes/font_size = 0
theme_override_styles/fg = SubResource( "StyleBoxFlat_vlmy6" )
theme_override_styles/bg = SubResource( "StyleBoxFlat_yww6n" )
max_value = 5.0
value = 3.0
percent_visible = false

[node name="Label" type="Label" parent="." index="10"]
offset_left = -20.0
offset_top = -45.0
offset_right = 20.0
offset_bottom = -29.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = SubResource( "Font_sjot6" )
text = "321"
horizontal_alignment = 1

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="target_reached" from="NavAgent" to="." method="_on_nav_agent_target_reached"]
[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
